# agentic-ai-py

./: .gitignore  README.md  config.example.json  pyproject.toml  run.sh  setup.sh  todo.md
agent/app/: config.py  context.py  main.py  models.py  prompts.py  react.py  store.py  summary.py
agent/app/llm/: __init__.py  anthropic_llm.py  base.py  ollama_llm.py
agent/app/static/: app.js  index.html
agent/app/tools/: base.py  mcp_client.py  mcp_tool.py  pdf_search.py  recall_history.py  web_search.py
docs/: API.md  CONVERSATION_STORAGE_FORMAT.md  DATAFLOW.md  INGESTION_FORMAT.md  MCP_CLIENT.md  MCP_SERVER.md  PDF_ENDPOINT_SSE_FORMAT.md  PLAN_CONVERSATIONAL_RETRIEVAL.md  RECALL_HISTORY_TOOL.md  capture_screenshots.py  index.html
docs/assets/: showcase.css
docs/screenshots/: README.md
mcp_server/app/: db.py  handlers.py  server.py
retrieval/app/: books_catalog.py  chunking.py  config.py  embeddings.py  ingest.py  main.py  pdf.py  pinecone_store.py  search.py
retrieval/app/static/: app.js  index.html
shared/: config.py
shared/static/: style.css
tests/: conftest.py  test_books_catalog.py  test_chunking.py  test_context.py  test_ingest_records.py  test_llm_selection.py  test_mcp_handlers.py  test_mcp_tool.py  test_prompts.py  test_react.py  test_recall_history.py  test_search_stream.py  test_sse_parsing.py  test_summary.py  test_tool_manager.py
