[project]
name = "agentic-ai-py"
version = "0.1.0"
description = "Your Library Knowledge Base — source toggles, memory, web search (Python)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "motor>=3.4",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pinecone>=5.0",
    "pypdf>=4.0",
    "langchain-text-splitters>=0.2",
    "mcp>=1.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["retrieval*", "agent*", "mcp_server*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
